# Cat--_STL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  vcpkg.json
.cache/clangd/index/: Cat++_PerformanceTest.h.E5A6AC5E659F71D7.idx  Cat++_allocator.h.9A03DABCE2E60C63.idx  Cat++_config.h.0DD77F3723AE2E70.idx  Cat++_pool_alloc.cpp.079016F38348D8B0.idx  Cat++_pool_alloc.h.638E9796104A73F6.idx  allocator_exception.h.C1FDAFBD28BD790C.idx  test_alloc.cpp.513A14928CD520C0.idx
doc/: alloc.drawio  allocw.drawio  架构
src/: Cat++_config.h
src/alloc/: Cat++_alloc.h  Cat++_alloc_selector.h  Cat++_allocator.h  Cat++_pool_alloc.h
src/container/: Cat++_vector.h
src/execption/: allocator_exception.h
src/traits/: Cat++_allocator_traits.h  Cat++_concepts.h  Cat++_type_traits.h
test/: test_alloc.cpp
util/dev_dependency/Cat++_test/: CMakeLists.txt
util/dev_dependency/Cat++_test/src/: Cat++_PerformanceTest.h
